--- a/app/src/main/res/layout/activity_frontpage.xml
+++ b/app/src/main/res/layout/activity_frontpage.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:text="@string/start_toggle"
         android:id="@+id/start_toggle"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/timeSeek"
         android:layout_alignRight="@+id/seekVal"
         android:layout_alignEnd="@+id/seekVal" />
 
@@ -95,7 +95,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/timeSeek"
-        android:max="24"
+        android:max="23"
         android:layout_marginTop="66dp"
         android:layout_below="@+id/linearLayout"
         android:layout_alignLeft="@+id/linearLayout"
@@ -108,12 +108,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Hours: 16"
+        android:text="Duration:  1 hour"
         android:id="@+id/seekVal"
         android:textSize="14sp"
+        android:layout_marginRight="19dp"
         android:layout_below="@+id/linearLayout2"
         android:layout_alignRight="@+id/timeSeek"
-        android:layout_alignEnd="@+id/timeSeek"
-        android:layout_marginRight="31dp" />
+        android:layout_alignEnd="@+id/timeSeek" />
 
 </RelativeLayout>
