--- a/app/src/main/res/layout-land/activity_frontpage.xml
+++ b/app/src/main/res/layout-land/activity_frontpage.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:text="@string/start_toggle"
         android:id="@+id/start_toggle"
-        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/timeSeek"
         android:layout_alignRight="@+id/seekVal"
         android:layout_alignEnd="@+id/seekVal" />
 
@@ -58,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="21:00"
+            android:text="21:00:22"
             android:id="@+id/clock_text"
             android:textSize="15sp" />
 
@@ -101,7 +101,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="00"
+                android:text="00:22"
                 android:id="@+id/endclock_text"
                 android:textSize="15sp"
                 android:layout_gravity="center_horizontal" />
@@ -110,6 +110,7 @@
                 android:layout_width="78dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text=" Tomorrow"
                 android:id="@+id/dayText"
                 android:textSize="15sp" />
         </LinearLayout>
