--- a/app/src/main/res/layout-land/fragment_fasting_length.xml
+++ b/app/src/main/res/layout-land/fragment_fasting_length.xml
@@ -67,7 +67,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/linearLayout2"
+        android:id="@+id/clock_linear"
         android:layout_gravity="right|left"
         android:layout_below="@+id/linearLayout"
         android:layout_alignParentLeft="true"
@@ -95,7 +95,7 @@
                 android:id="@+id/dynamicHour"
                 android:textSize="15sp"
                 android:layout_above="@+id/seekVal"
-                android:layout_toRightOf="@+id/linearLayout2" />
+                android:layout_toRightOf="@+id/clock_linear" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -139,7 +139,7 @@
         android:id="@+id/seekVal"
         android:textSize="14sp"
         android:layout_marginRight="19dp"
-        android:layout_below="@+id/linearLayout2"
+        android:layout_below="@+id/clock_linear"
         android:layout_alignRight="@+id/timeSeek"
         android:layout_alignEnd="@+id/timeSeek" />
 
