--- a/app/src/main/res/layout/activity_fasting_tracker.xml
+++ b/app/src/main/res/layout/activity_fasting_tracker.xml
@@ -9,7 +9,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.avaygo.myfastingtracker.aFastingTracker"
-    android:background="#ffd2d7d3"
-    android:clickable="false">
+    android:clickable="false"
+    android:background="#2C3E50">
 
 </RelativeLayout>
